UPD: ensure full screen on mobile

--- a/src/Pages/Users/map/ThreeCanvas.scss
+++ b/src/Pages/Users/map/ThreeCanvas.scss
@@ -30,12 +30,13 @@ canvas{
 #container{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     position: relative;
     overflow: hidden;
 }
 #mapCont{
     min-width: 100%;
+    height: 100%;
     flex: 3;
     overflow: hidden;
 }
